<resources>
    <string name="app_name">TodoApp</string>
    <string name="high">HIGH</string>
    <string name="medium">MEDIUM</string>
    <string name="low">LOW</string>
    <string name="dueDate_4Hours">In 4 Hours</string>
    <string name="dueDate_8Hours">In 8 Hours</string>
    <string name="dueDate_tmw">Tomorrow</string>
    <string name="dueDate_3Days">3 Days From Now</string>
    <string name="dueDate_nextWeek">Next Week</string>
    <string name="dueDate_2Weeks">In 2 Weeks</string>
    <string name="dueDate_nextMonth">Next Month</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="period_0_1_hours">In less than an hour</string>
    <string name="period_1_2_hours">In 1 to 2 hours</string>
    <string name="period_2_4_hours">In 2 to 4 hours</string>
    <string name="period_4_8_hours">In 4 to 8 hours</string>
    <string name="period_8_24_hours">In 8 hours to the next day</string>
    <string name="period_1_2_days">In 1 to 2 days</string>
    <string name="period_2_4_days">In 2 to 4 days</string>
    <string name="period_4_7_days">In 4 days to a week</string>
    <string name="period_1_2_weeks">In a week to 2 weeks</string>
    <string name="period_2_weeks_to_month">In 2 weeks to a month</string>
    <string name="period_1_month_to_2_years">In over a month</string>
    <string name="past_due">Past due</string>
    <string name="save">Save</string>
    <string name="dueDateLabel">Due Date:</string>
    <string name="futureDateLabel">Future Date:</string>
    <string name="timeUntilDateLabel">Time Until Date:</string>
    <string name="edit">Edit</string>
</resources>
