<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.todoapp.editpage.EditItemActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/eiDatesTable">

        <TableRow>
            <TextView android:id="@+id/eiDateTextLabel"
                android:text="@string/futureDateLabel"
                android:textAlignment="textEnd" />
            <TextView
                android:text="TextView"
                android:id="@+id/eiDateText"
                android:layout_marginLeft="10dp"/>
        </TableRow>

        <TableRow>
            <TextView android:id="@+id/eiTimeUntilDateLabel"
                android:text="@string/timeUntilDateLabel"
                android:textAlignment="textEnd" />
            <TextView
                android:text="TextView"
                android:id="@+id/eiTimeUntilDate"
                android:layout_marginLeft="10dp" />
        </TableRow>
    </TableLayout>

    <Button
        android:text="@string/save"
        android:onClick="onSaveEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eiSaveBtn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/eiRadioGroup"
        android:layout_above="@+id/eiSaveBtn"
        android:layout_centerHorizontal="true">
        <RadioButton android:id="@+id/rbHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high"
            android:textSize="18dp" />
        <RadioButton android:id="@+id/rbMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:textSize="18dp" />
        <RadioButton android:id="@+id/rbLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low"
            android:textSize="18dp"/>
    </RadioGroup>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/eiEditText"
        android:layout_above="@+id/eiRadioGroup"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eiEditDateBtn"
        android:layout_below="@+id/eiDatesTable"
        android:onClick="onEditDate"/>

</RelativeLayout>
